# fqz-hsa-frontend

./: .gitignore  Cargo.toml  Trunk.toml  index.html
public/: styles.css
scratch/: download_2021_pdf.py  download_core_files.py  download_nhsa_files.py  download_policies.py  download_policies_v2.py
src/: app.rs  index.css  main.rs
src/api/: client.rs  constants.rs  mod.rs  models.rs  templates.json
src/components/: comparison_modal.rs  data_table.rs  mod.rs  modal.rs  sidebar.rs  template_editor.rs  tenant_selector.rs
src/pages/: agent.rs  audit_query.rs  case_library.rs  clue_audit.rs  confirm_finish.rs  dashboard.rs  ledger.rs  memory_auditor.rs  mod.rs  palace.rs  portal.rs  punish_appeal.rs  punish_decision.rs  punish_execution.rs  punish_filing.rs  punish_hearing.rs  punish_investigation.rs  punish_legal.rs  punish_notice.rs  punish_transfer.rs
