[package]
name = "fqz-hsa-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlElement", "Window"] }
console_error_panic_hook = "0.1"
gloo-net = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
